--- a/API Gateway/API Gateway.csproj
+++ b/API Gateway/API Gateway.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Ocelot" Version="23.4.2" />
   </ItemGroup>
 
