--- a/JwtAuthentication/Properties/launchSettings.json
+++ b/JwtAuthentication/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://192.168.1.106:5000",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5094",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -13,8 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://192.168.1.106:7000;http://192.168.1.106:5000",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7244;http://localhost:5094",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
