--- a/Customer.Application/User.Application.csproj
+++ b/Customer.Application/User.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Customer.Domain\Customer.Domain.csproj" />
+    <ProjectReference Include="..\Customer.Domain\User.Domain.csproj" />
   </ItemGroup>
 
 </Project>
