--- a/Microservice_customer/User.WebApi.csproj
+++ b/Microservice_customer/User.WebApi.csproj
@@ -23,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Customer.Application\Customer.Application.csproj" />
-    <ProjectReference Include="..\Customer.Domain\Customer.Domain.csproj" />
-    <ProjectReference Include="..\Customer.infrastructure\Customer.infrastructure.csproj" />
+    <ProjectReference Include="..\Customer.Application\User.Application.csproj" />
+    <ProjectReference Include="..\Customer.Domain\User.Domain.csproj" />
+    <ProjectReference Include="..\Customer.infrastructure\User.infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
