--- a/User.infrastructure/User.infrastructure.csproj
+++ b/User.infrastructure/User.infrastructure.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Customer.Application\User.Application.csproj" />
-    <ProjectReference Include="..\Customer.Domain\User.Domain.csproj" />
+    <ProjectReference Include="..\User.Application\User.Application.csproj" />
+    <ProjectReference Include="..\User.Domain\User.Domain.csproj" />
   </ItemGroup>
 
 </Project>
