--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "customer.webapi": "StartDebugging"
+        "User.webapi": "StartDebugging"
       }
     }
   }
