Integrate Serilog for enhanced logging capabilities
Integrated Serilog into the project for improved logging. Updated `UserController.cs` to include detailed logging in various methods. Configured Serilog in `Program.cs` and added the `Serilog.AspNetCore` package to `User.WebApi.csproj`. Updated `appsettings.json` to configure Serilog with console and file sinks, daily log rolling, and additional properties for enrichment.

--- a/Microservice_User/appsettings.json
+++ b/Microservice_User/appsettings.json
@@ -1,10 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Microservice_User"
     }
   },
+  
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Microservice_User;Trusted_Connection=True;TrustServerCertificate=True"
