Refactor logging configuration
Updated `Program.cs` to use Serilog with a minimum logging level of `Debug`, writing logs to both console and file with a daily rolling interval. Removed previous Serilog configuration from `appsettings.json`. Added new logging configuration under `Logging` with specific log levels for `Default` and `Microsoft.AspNetCore`. Included `AllowedHosts` setting in `appsettings.json`.

--- a/Microservice_User/appsettings.json
+++ b/Microservice_User/appsettings.json
@@ -1,25 +1,11 @@
 {
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log.txt",
-          "rollingInterval": "Day"
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-    "Properties": {
-      "Application": "Microservice_User"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Microservice_User;Trusted_Connection=True;TrustServerCertificate=True"
