--- a/User.Application/User.Application.csproj
+++ b/User.Application/User.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.29.0" />
   </ItemGroup>
 
   <ItemGroup>
