Fix imports, update paths, and upgrade Mapster version
- Cleaned up `using` directives in `UnitTest1.cs` by removing an unnecessary import of `User.Services`.
- Corrected `ProjectReference` path in `User.Test.csproj` to point to the correct location of `User.WebApi.csproj`.
- Updated `Mapster` package version in `User.WebApi.csproj` to `7.4.1-pre01`.

--- a/User.Test/User.Test.csproj
+++ b/User.Test/User.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microservice_User\User.WebApi.csproj" />
+    <ProjectReference Include="..\User.WebApi\User.WebApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
